Fixed bug on mobile browsers where site map look unappealing

--- a/css/navbar-redesign.css
+++ b/css/navbar-redesign.css
@@ -163,5 +163,11 @@ body {
     .row {
         color: grey
     }
+    .row-bot {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+    }
 
 }
